<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gmail.timy2517.airtickets.presenter.ContainerActivity">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/tvCityFrom"
                android:layout_width="31dp"
                android:layout_height="19dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/tvCityFrom"
                app:layout_constraintBottom_toTopOf="@+id/spinnerCityTo"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="16dp"/>

            <Spinner
                android:id="@+id/spinnerCityFrom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintLeft_toRightOf="@+id/tvCityFrom"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:entries="@array/cities"/>

            <TextView
                android:id="@+id/tvCityTo"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/tvCityTo"
                app:layout_constraintBottom_toTopOf="@+id/cbTransfer"
                app:layout_constraintHorizontal_weight="0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerCityFrom"
                app:layout_constraintVertical_bias="0.555"
                android:layout_marginStart="16dp"/>

            <Spinner
                android:id="@+id/spinnerCityTo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintLeft_toRightOf="@+id/tvCityTo"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerCityFrom"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:entries="@array/cities"
                app:layout_constraintHorizontal_bias="0.502"/>

            <CheckBox
                android:id="@+id/cbTransfer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cbTransfer"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/spinnerCityTo"
                android:layout_marginLeft="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="16dp"/>

            <TextView
                android:id="@+id/tvDateFrom"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:text="@string/tvDateFrom"
                android:layout_marginLeft="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/cbTransfer"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/dateToButton"
                android:layout_marginStart="16dp"/>

            <Button
                android:id="@+id/dateFromButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="DateFrom"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/cbTransfer"
                android:layout_marginRight="16dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/tvDateFrom"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintHorizontal_bias="0.488"/>

            <TextView
                android:id="@+id/tvDateTo"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:text="@string/tvDateTo"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/dateFromButton"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/radioGroupSort"/>

            <Button
                android:id="@+id/dateToButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="DateTo"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/dateFromButton"
                android:layout_marginRight="16dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/tvDateTo"
                android:layout_marginLeft="16dp"/>

            <RadioGroup
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:id="@+id/radioGroupSort"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/dateToButton"
                android:layout_marginLeft="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="16dp">

                <RadioButton
                    android:id="@+id/rbPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rbPrice"/>

                <RadioButton
                    android:id="@+id/rbTimeTransfer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rbTimeOfFlight"/>

                <RadioButton
                    android:id="@+id/rbBest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rbBest"
                    android:checked="true"/>
            </RadioGroup>

            <Button
                android:id="@+id/makeMeWell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/makeMeWell"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/radioGroupSort"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>
        </android.support.constraint.ConstraintLayout>
</ScrollView>
